--- a/style.css
+++ b/style.css
@@ -196,3 +196,14 @@ footer a:hover{
     border-top:1px solid white;
     padding-bottom:2px;
 }
+
+
+@media only screen and (max-width: 600px) {
+    header {
+        font-size: .8rem;
+    }
+    form input{
+        border-radius:  0 7px 7px 0;
+        min-width: 20%;
+    }
+  }
