--- a/style.css
+++ b/style.css
@@ -208,4 +208,10 @@ footer a:hover{
     select{
         min-width: 10%;
     }
-  }
+    .todo{
+        min-width: 10%;
+        margin: .5rem .8rem;
+        font-size: 1rem;
+
+    }
+}
