--- a/style.css
+++ b/style.css
@@ -203,15 +203,16 @@ footer a:hover{
         font-size: .8rem;
     }
     form input{
-        max-width: 30%;
+        max-width: 50%;
+        padding: 0.1rem;
+        margin: 0.1rem;
     }
-    select{
-        min-width: 10%;
+    .select{
+        max-width: 15%;
     }
     .todo{
-        min-width: 10%;
         margin: .5rem .8rem;
         font-size: 1rem;
-
+        max-width: 80%;
     }
 }
